...
        'text': 'Paint Search',
        'screen': 'paint_search',
        'restricted': false,
      },
      {
        'icon': Icons.qr_code_scanner_outlined,
        'text': 'Barcode Scanner',
        'screen': 'barcode_scanner',
        'restricted': false,
      },

      // Secciones principales (separadas por un divisor visual)
      {
        'icon': Icons.home_outlined,
        'text': 'Home',
        'screen': 'home',
        'restricted': false,
      },
      {
        'icon': Icons.inventory_outlined,
        'text': 'My Inventory',
...
        'text': 'Wishlist',
        'screen': 'wishlist',
        'restricted': true,
      },
      {
        'icon': Icons.grid_view_outlined,
        'text': 'Library',
        'screen': 'library',
        'restricted': false,
      },
      {
        'icon': Icons.palette_outlined,
        'text': 'My Palettes',
...
